eks/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myfirstnginx1
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
