eks/bookstoreingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  ingressClassName: istio
  rules:
    - http:
        paths:
          - path: /productpage
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 80
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 80
          - path: /login
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 80
          - path: /logout
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 80
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 80
